--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Litemapper</title>
-    <link rel="stylesheet" href="public/style.css">
-    <script src="public/index.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
+    <link rel="shortcut icon" href="icon.png" type="image/png">
 </head>
 <body>
     <div class="content">
-        <img src="public/icon.png" style="width: 150px; height: 150px;" alt="">
+        <img src="icon.png" style="width: 150px; height: 150px;" alt="">
         <h1>Litemapper</h1>
         <div class="spinner" style="display: none;"></div>
         <div id="upload-section" class="upload-section">
